// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers channelsReducer should correctly setChannel 1`] = `
Object {
  "channel": "channel",
  "channelForm": Object {
    "isOpen": false,
    "local_amt": "",
    "node_key": "",
    "push_amt": "",
  },
  "channels": Array [],
  "channelsLoading": false,
  "openingChannel": false,
  "pendingChannels": Object {
    "pending_closing_channels": Array [],
    "pending_force_closing_channels": Array [],
    "pending_open_channels": Array [],
    "total_limbo_balance": "",
  },
}
`;

exports[`reducers channelsReducer should correctly setChannelForm 1`] = `
Object {
  "channel": null,
  "channelForm": Object {
    "isOpen": true,
    "local_amt": "",
    "node_key": "",
    "push_amt": "",
  },
  "channels": Array [],
  "channelsLoading": false,
  "openingChannel": false,
  "pendingChannels": Object {
    "pending_closing_channels": Array [],
    "pending_force_closing_channels": Array [],
    "pending_open_channels": Array [],
    "total_limbo_balance": "",
  },
}
`;

exports[`reducers channelsReducer should correctly setChannelForm 2`] = `
Object {
  "channel": null,
  "channelForm": Object {
    "isOpen": false,
    "local_amt": "",
    "node_key": "",
    "push_amt": "",
  },
  "channels": Array [],
  "channelsLoading": true,
  "openingChannel": false,
  "pendingChannels": Object {
    "pending_closing_channels": Array [],
    "pending_force_closing_channels": Array [],
    "pending_open_channels": Array [],
    "total_limbo_balance": "",
  },
}
`;

exports[`reducers channelsReducer should correctly setChannelForm 3`] = `
Object {
  "channel": null,
  "channelForm": Object {
    "isOpen": false,
    "local_amt": "",
    "node_key": "",
    "push_amt": "",
  },
  "channels": Array [
    1,
    2,
  ],
  "channelsLoading": false,
  "openingChannel": false,
  "pendingChannels": Array [
    3,
    4,
  ],
}
`;

exports[`reducers channelsReducer should correctly setChannelForm 4`] = `
Object {
  "channel": null,
  "channelForm": Object {
    "isOpen": false,
    "local_amt": "",
    "node_key": "",
    "push_amt": "",
  },
  "channels": Array [],
  "channelsLoading": false,
  "openingChannel": true,
  "pendingChannels": Object {
    "pending_closing_channels": Array [],
    "pending_force_closing_channels": Array [],
    "pending_open_channels": Array [],
    "total_limbo_balance": "",
  },
}
`;

exports[`reducers channelsReducer should handle initial state 1`] = `
Object {
  "channel": null,
  "channelForm": Object {
    "isOpen": false,
    "local_amt": "",
    "node_key": "",
    "push_amt": "",
  },
  "channels": Array [],
  "channelsLoading": false,
  "openingChannel": false,
  "pendingChannels": Object {
    "pending_closing_channels": Array [],
    "pending_force_closing_channels": Array [],
    "pending_open_channels": Array [],
    "total_limbo_balance": "",
  },
}
`;
